add analize GC